Fix work description field to wrap words

--- a/src/components/CVForm/WorkForm/workForm.scss
+++ b/src/components/CVForm/WorkForm/workForm.scss
@@ -8,8 +8,24 @@
   }
 }
 
-.form-buttons-block {
+.top-block {
+  align-items: center;
   display: flex;
   justify-content: space-around;
-  margin: 1em;
+}
+
+.work-position {
+  font-size: larger;
+  font-weight: 700;
+}
+
+.work-company {
+  font-weight: 500;
+  margin-top: 10px;
+}
+
+.work-description {
+  font-size: smaller;
+  overflow-wrap: break-word;
+  padding: 1em;
 }
