--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,7 +20,8 @@ body {
 }
 
 .resume-form-block {
-  width: fit-content;
+  max-width: 80vh;
+  min-width: 80vh;
 }
 
 input,
@@ -82,6 +83,10 @@ button {
   display: flex;
   justify-content: space-around;
   margin: 2em 0;
+
+  &.--block {
+    display: block;
+  }
 }
 
 .period {
